# tg-bot

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  polling.docker-compose.yml  tg-ai-moderator.service  webhook.docker-compose.yml
src/: config.rs  dotenv.rs  main.rs
src/ai/: mod.rs  provider.rs
src/ai/cloud/: mod.rs  openrouter.rs
src/service/: messages.rs  mod.rs  prompts.rs  service.rs  state.rs  webhook.rs
src/service/handlers/: mod.rs
src/service/handlers/commands/: clear_injects.rs  help.rs  inject.rs  mod.rs  set_lang.rs  set_mode.rs  status.rs  toggle_inject.rs
src/service/handlers/updates/: cas.rs  mod.rs  quarantine.rs
src/telegram/: bot.rs  cas.rs  mod.rs
templates/messages/: antispam_en.jinja  antispam_ru.jinja  cas_en.jinja  cas_ru.jinja  clear_injects_en.jinja  clear_injects_ru.jinja  command_usage_en.jinja  command_usage_ru.jinja  help_en.jinja  help_ru.jinja  inject_en.jinja  inject_ru.jinja  set_lang_en.jinja  set_lang_ru.jinja  set_mode_en.jinja  set_mode_ru.jinja  toggle_inject_en.jinja  toggle_inject_ru.jinja
templates/prompts/: admin_prompt_inject.jinja  check_message.jinja  moderator_motd.jinja
